--- a/blocks/eloqua-form/forms/event-from.html
+++ b/blocks/eloqua-form/forms/event-from.html
@@ -900,7 +900,7 @@
         <div class="layout-col col-sm-6 col-xs-12">
           <div id="formElement8" class="elq-field-style form-element-layout row">
             <div style="text-align:left;" class="col-sm-12 col-xs-12">
-              <label class="elq-label " for="fe1031">Event Date
+              <label class="elq-label " for="fe1031">Please select dates provided in your invitation:
               </label>
             </div>
             <div class="col-sm-12 col-xs-12">
