fix: remove test host

--- a/tools/sidekick/library.html
+++ b/tools/sidekick/library.html
@@ -28,7 +28,7 @@
   <body>
     <script
       type="module"
-      src="https://main--franklin-library-host--dylandepass.hlx.live/tools/sidekick/library/index.js"
+      src="https://www.hlx.live/tools/sidekick/library/index.js"
     ></script>
     <script>
       const library = document.createElement('sidekick-library')
