Creating new variables following redesign styleguide + changed base unit for the system to 16 pixels

--- a/404.html
+++ b/404.html
@@ -40,7 +40,7 @@
     }
 
     main.error .error-number text {
-      font-family: var(--fixed-font-family);
+      font-family: var(--font-family-fixed);
     }
   </style>
   <link rel="stylesheet" href="/styles/lazy-styles.css">
