--- a/blocks/eloqua-form/forms/event-from.html
+++ b/blocks/eloqua-form/forms/event-from.html
@@ -133,7 +133,7 @@
     margin-top:20px;
     margin-bottom:20px;
     border:0;
-    border-top:1px solid #eee}
+    border-top:1px solid var(--c-grey-1)}
   .elq-form .sr-only{
     position:absolute;
     width:1px;
@@ -707,7 +707,7 @@
   }
 
   .eloqua-form .radio-pill-version input[type="radio"]:checked + label {
-    background: var(--link-color);
+    background: var(--c-cta-blue-default);
     color: white;
   }
 </style>
