--- a/blocks/eloqua-form/forms/turbo-calculator-form.html
+++ b/blocks/eloqua-form/forms/turbo-calculator-form.html
@@ -118,7 +118,7 @@
     margin-top:20px;
     margin-bottom:20px;
     border:0;
-    border-top:1px solid #eee}
+    border-top:1px solid var(--c-grey-1)}
   .elq-form .sr-only{
     position:absolute;
     width:1px;
