--- a/tools/sidekick/library.html
+++ b/tools/sidekick/library.html
@@ -16,7 +16,7 @@
         margin: 0;
         padding: 0;
         font-family: sans-serif;
-        background-color: #ededed;
+        background-color: var(--c-grey-1);
         height: 100%;
       }
       
