--- a/head.html
+++ b/head.html
@@ -4,3 +4,4 @@
 <script src="/scripts/scripts.js" type="module"></script>
 <link rel="stylesheet" href="/styles/styles.css"/>
 <link rel="icon" href="data:,">
+<link rel="preconnect" href="https://vjs.zencdn.net"/>
