--- a/head.html
+++ b/head.html
@@ -1,7 +1,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1"/>
 <meta name="referrer" content="no-referrer-when-downgrade" />
 <link rel="modulepreload" href="/scripts/scripts.js"/>
-<script src="/scripts/lib-franklin.js" type="module"></script>
+<script src="/scripts/aem.js" type="module"></script>
 <script src="/scripts/scripts.js" type="module"></script>
 <link rel="preload" href="/constants.json" as="fetch" type="application/json" crossorigin="anonymous"/>
 <link rel="stylesheet" href="/styles/styles.css"/>
