make tool fgrep configurable; MT#663

--- a/tools/fgrep-attr/fgrep.html
+++ b/tools/fgrep-attr/fgrep.html
@@ -1,8 +1,12 @@
 <html>
     <head>
-        <title>fgrep</title>
-        <script type="module" src="fgrep.js"></script>
-        <style>
+      <!-- we’re not reusing common.js, as it will load aem.js -->
+      <!-- aem.js will in turn break fgrep.js -->
+      <script src="fgrep-config.js" type="module"></script>
+      <link rel="preload" href="/constants.json" as="fetch" type="application/json" crossorigin="anonymous"/>
+      <title>fgrep</title>
+      <script type="module" src="fgrep.js"></script>
+      <style>
 body, input {
   background-color: black;
   margin: 0;
