--- a/tools/tagger/index.html
+++ b/tools/tagger/index.html
@@ -7,6 +7,8 @@
   <head>
     <title>Volvo Trucks - Tagger</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <script src="/tools/sidekick/tools-config.js" type="module"></script>
+    <link rel="preload" href="/constants.json" as="fetch" type="application/json" crossorigin="anonymous"/>
     <script src="/tools/tagger/tagger.js" type="module"></script>
     <link rel="stylesheet" href="/tools/tagger/tagger.css"/>
   </head>
