--- a/head.html
+++ b/head.html
@@ -3,6 +3,19 @@
 <link rel="modulepreload" href="/scripts/scripts.js"/>
 <script src="/scripts/aem.js" type="module"></script>
 <script src="/scripts/scripts.js" type="module"></script>
-<link rel="preload" href="/constants.json" as="fetch" type="application/json" crossorigin="anonymous"/>
+<script type="module">
+    import { getLanguagePath } from '/scripts/common.js';
+  
+    const dynamicUrl = `${getLanguagePath()}constants.json`;
+  
+    const link = document.createElement('link');
+    link.rel = 'preload';
+    link.href = dynamicUrl;
+    link.as = 'fetch';
+    link.type = 'application/json';
+    link.crossorigin = 'anonymous';
+  
+    document.head.appendChild(link);
+  </script>
 <link rel="stylesheet" href="/styles/styles.css"/>
 <link rel="icon" href="data:,">
