--- a/head.html
+++ b/head.html
@@ -1,21 +1,26 @@
-<meta name="viewport" content="width=device-width, initial-scale=1"/>
+<meta name="viewport" content="width=device-width, initial-scale=1" />
 <meta name="referrer" content="no-referrer-when-downgrade" />
-<link rel="modulepreload" href="/scripts/scripts.js"/>
+<link rel="modulepreload" href="/scripts/scripts.js" />
 <script src="/scripts/aem.js" type="module"></script>
 <script src="/scripts/scripts.js" type="module"></script>
 <script type="module">
-    import { getLanguagePath } from '/scripts/common.js';
-  
-    const dynamicUrl = `${getLanguagePath()}constants.json`;
-  
-    const link = document.createElement('link');
-    link.rel = 'preload';
-    link.href = dynamicUrl;
-    link.as = 'fetch';
-    link.type = 'application/json';
-    link.crossorigin = 'anonymous';
-  
-    document.head.appendChild(link);
-  </script>
-<link rel="stylesheet" href="/styles/styles.css"/>
-<link rel="icon" href="data:,">
+  import { getLanguagePath } from '/scripts/common.js';
+
+  let dynamicUrl;
+  try {
+    dynamicUrl = `${getLanguagePath()}constants.json`;
+  } catch (error) {
+    console.log(error);
+  }
+
+  const link = document.createElement('link');
+  link.rel = 'preload';
+  link.href = dynamicUrl;
+  link.as = 'fetch';
+  link.type = 'application/json';
+  link.crossorigin = 'anonymous';
+
+  document.head.appendChild(link);
+</script>
+<link rel="stylesheet" href="/styles/styles.css" />
+<link rel="icon" href="data:," />
