--- a/head.html
+++ b/head.html
@@ -1,26 +1,8 @@
-<meta name="viewport" content="width=device-width, initial-scale=1" />
+<meta name="viewport" content="width=device-width, initial-scale=1"/>
 <meta name="referrer" content="no-referrer-when-downgrade" />
-<link rel="modulepreload" href="/scripts/scripts.js" />
+<link rel="modulepreload" href="/scripts/scripts.js"/>
 <script src="/scripts/aem.js" type="module"></script>
 <script src="/scripts/scripts.js" type="module"></script>
-<script type="module">
-  import { getLanguagePath } from '/scripts/common.js';
-
-  try {
-    const dynamicUrl = `${getLanguagePath()}constants.json`;
-
-    const link = document.createElement('link');
-    link.href = dynamicUrl;
-    link.type = 'application/json';
-    link.crossorigin = 'anonymous';
-    if (!window.location.pathname.includes('truck-builder')) {
-      link.rel = 'preload';
-      link.as = 'fetch';
-    }
-    document.head.appendChild(link);
-  } catch (error) {
-    console.log(error);
-  }
-</script>
-<link rel="stylesheet" href="/styles/styles.css" />
-<link rel="icon" href="data:," />
+<link rel="preload" href="/constants.json" as="fetch" type="application/json" crossorigin="anonymous"/>
+<link rel="stylesheet" href="/styles/styles.css"/>
+<link rel="icon" href="data:,">
